src/objects/caesars_lms_source_desc_sda_temp__x.object
<CustomObject>
    <description>caesars$lms_source_desc_sda_temp</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>caesars$lms_source_desc_sda_temp</externalName>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_fk__c</fullName>
        <description>c_prop_cd_fk</description>
        <externalDeveloperName>c_prop_cd_fk</externalDeveloperName>
        <label>c_prop_cd_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rms_group_source_cd__c</fullName>
        <description>c_rms_group_source_cd</description>
        <externalDeveloperName>c_rms_group_source_cd</externalDeveloperName>
        <label>c_rms_group_source_cd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_cat1__c</fullName>
        <description>c_source_cat1</description>
        <externalDeveloperName>c_source_cat1</externalDeveloperName>
        <label>c_source_cat1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_cat2__c</fullName>
        <description>c_source_cat2</description>
        <externalDeveloperName>c_source_cat2</externalDeveloperName>
        <label>c_source_cat2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_cat3__c</fullName>
        <description>c_source_cat3</description>
        <externalDeveloperName>c_source_cat3</externalDeveloperName>
        <label>c_source_cat3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_cat_sda__c</fullName>
        <description>c_source_cat_sda</description>
        <externalDeveloperName>c_source_cat_sda</externalDeveloperName>
        <label>c_source_cat_sda</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_cd__c</fullName>
        <description>c_source_cd</description>
        <externalDeveloperName>c_source_cd</externalDeveloperName>
        <label>c_source_cd</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_cd_desc__c</fullName>
        <description>c_source_cd_desc</description>
        <externalDeveloperName>c_source_cd_desc</externalDeveloperName>
        <label>c_source_cd_desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_group__c</fullName>
        <description>c_source_group</description>
        <externalDeveloperName>c_source_group</externalDeveloperName>
        <label>c_source_group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag1__c</fullName>
        <description>c_user_flag1</description>
        <externalDeveloperName>c_user_flag1</externalDeveloperName>
        <label>c_user_flag1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag2__c</fullName>
        <description>c_user_flag2</description>
        <externalDeveloperName>c_user_flag2</externalDeveloperName>
        <label>c_user_flag2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag3__c</fullName>
        <description>c_user_flag3</description>
        <externalDeveloperName>c_user_flag3</externalDeveloperName>
        <label>c_user_flag3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_last_update_ts__c</fullName>
        <description>d_last_update_ts</description>
        <externalDeveloperName>d_last_update_ts</externalDeveloperName>
        <label>d_last_update_ts</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>f_user_amt1__c</fullName>
        <description>f_user_amt1</description>
        <externalDeveloperName>f_user_amt1</externalDeveloperName>
        <label>f_user_amt1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_user_amt2__c</fullName>
        <description>f_user_amt2</description>
        <externalDeveloperName>f_user_amt2</externalDeveloperName>
        <label>f_user_amt2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_user_amt3__c</fullName>
        <description>f_user_amt3</description>
        <externalDeveloperName>f_user_amt3</externalDeveloperName>
        <label>f_user_amt3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_source_cat1_sort__c</fullName>
        <description>i_source_cat1_sort</description>
        <externalDeveloperName>i_source_cat1_sort</externalDeveloperName>
        <label>i_source_cat1_sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_source_cat2_sort__c</fullName>
        <description>i_source_cat2_sort</description>
        <externalDeveloperName>i_source_cat2_sort</externalDeveloperName>
        <label>i_source_cat2_sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_source_cat3_sort__c</fullName>
        <description>i_source_cat3_sort</description>
        <externalDeveloperName>i_source_cat3_sort</externalDeveloperName>
        <label>i_source_cat3_sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_source_cat_sda_sort__c</fullName>
        <description>i_source_cat_sda_sort</description>
        <externalDeveloperName>i_source_cat_sda_sort</externalDeveloperName>
        <label>i_source_cat_sda_sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score1__c</fullName>
        <description>i_user_score1</description>
        <externalDeveloperName>i_user_score1</externalDeveloperName>
        <label>i_user_score1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score2__c</fullName>
        <description>i_user_score2</description>
        <externalDeveloperName>i_user_score2</externalDeveloperName>
        <label>i_user_score2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score3__c</fullName>
        <description>i_user_score3</description>
        <externalDeveloperName>i_user_score3</externalDeveloperName>
        <label>i_user_score3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>source_code_fk__c</fullName>
        <description>source_code_fk</description>
        <externalDeveloperName>source_code_fk</externalDeveloperName>
        <label>source_code_fk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>caesars$lms_source_desc_sda_temp</label>
    <pluralLabel>caesars$lms_source_desc_sda_temp</pluralLabel>
</CustomObject>